--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-COUCOU NELLY
+<html>
+<head>
+    <title>WELCOME TO THE CLOUD</title>
+    <style>
+        body {
+            background-image: url("logo.jpg");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+        body a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <audio autoplay src="VIP-11.mp3"></audio>
+    <a href="https://vip.jeancloude.club" target="_blank"></a>
+</body>
+</html>
