--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>WELCOME TO THE CLOUD</title>
+    <title>Jean-Cloude - Le Cloude du Spectacle</title>
+    <link rel="icon" href="tete_noire.png" type="image/png">
     <style>
         body {
             background-image: url("logo.jpg");
@@ -16,7 +17,7 @@
     </style>
 </head>
 <body>
-    <audio autoplay src="VIP-11.mp3"></audio>
+    <audio autoplay src="VIP-1@1.mp3"></audio>
     <a href="https://vip.jeancloude.club" target="_blank"></a>
 </body>
 </html>
