--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <html>
 <head>
+    <!-- Titre de la page -->
     <title>Jean-Cloude - Le Cloude du Spectacle</title>
+
+    <!-- Favicon et icônes pour différents appareils -->
     <link rel="icon" href="tete_noire.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <!-- Couleur du thème pour les applications Windows -->
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Balises Meta Open Graph pour le partage sur les réseaux sociaux -->
+    <meta property="og:title" content="Jean-Cloude - Le Cloude du Spectacle">
+    <meta property="og:description" content="Bienvenue sur Jean-Cloude, le site du spectacle !">
+    <meta property="og:image" content="https://jeancloude.club/android-icon-192x192.png">
+    <meta property="og:url" content="https://jeancloude.club">
+    <meta property="og:type" content="website">
+
+    <!-- Styles CSS pour la page -->
     <style>
         body {
             background-image: url("logo.jpg");
@@ -17,8 +47,11 @@
         }
     </style>
 </head>
-    <body>
-        <audio src="VIP-11.mp3" id="audio"></audio>
-        <a href="https://vip.jeancloude.club" target="_blank" title="Let's cloude !" onclick="var audio = document.getElementById('audio'); audio.volume = 1; audio.play(); return true;"></a>
-    </body>
+<body>
+    <!-- Audio à jouer lors du clic sur le lien -->
+    <audio src="audio/VIP-11.mp3" id="audio"></audio>
+
+    <!-- Lien vers le site VIP avec lecture audio au clic -->
+    <a href="https://vip.jeancloude.club" target="_blank" title="Let's cloude !" onclick="var audio = document.getElementById('audio'); audio.volume = 1; audio.play(); return true;"></a>
+</body>
 </html>
