Mise à jour de l'URL de l'image dans les balises Open Graph

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Balises Meta Open Graph pour le partage sur les réseaux sociaux -->
     <meta property="og:title" content="Jean-Cloude">
     <meta property="og:description" content="Bienvenue sur Jean-Cloude, le site du spectacle !">
-    <meta property="og:image" content="https://jeancloude.club/android-icon-192x192.png">
+    <meta property="og:image" content="https://welcome.jeancloude.club/android-icon-192x192.png">
     <meta property="og:url" content="https://jeancloude.club">
     <meta property="og:type" content="website">
 
