Mise à jour du titre de la page et de la description dans les balises Open Graph

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <!-- Titre de la page -->
-    <title>Jean-Cloude</title>
+    <title>Bienvenue chez Jean-Cloude</title>
 
     <!-- Favicon et icônes pour différents appareils -->
     <link rel="icon" href="tete_noire.png" type="image/png">
@@ -27,7 +27,7 @@
 
     <!-- Balises Meta Open Graph pour le partage sur les réseaux sociaux -->
     <meta property="og:title" content="Jean-Cloude">
-    <meta property="og:description" content="Bienvenue sur Jean-Cloude, le site du spectacle !">
+    <meta property="og:description" content="Le Cloude du Spectacle !">
     <meta property="og:image" content="https://welcome.jeancloude.club/android-icon-192x192.png">
     <meta property="og:url" content="https://jeancloude.club">
     <meta property="og:type" content="website">
