Ajout des propriétés de hauteur et de largeur pour l'image dans les balises Open Graph

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <meta property="og:title" content="Jean-Cloude">
     <meta property="og:description" content="Le Cloude du Spectacle !">
     <meta property="og:image" content="https://welcome.jeancloude.club/android-icon-192x192.png">
+    <meta property="og:image:height" content="192">
+    <meta property="og:image:width" content="192">
     <meta property="og:url" content="https://jeancloude.club">
     <meta property="og:type" content="website">
 
